# multigit

./: ExampleConfig.toml  LICENSE.md  README.md  pyproject.toml
multigit/: main.py
