[tool.poetry]
name = "multigit"
version = "0.1.3"
description = "A tool for running git commands across multiple repositories."
authors = ["Jonathan Wight <jwight@mac.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.7.0"}
toml = "^0.10.2"
gitpython = "^3.1.37"

[tool.poetry.scripts]
mmgit = "multigit.main:app"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
